@@ -135,6 +135,7 @@ vips_create_operation_init( void )
 	extern GType vips_mask_ideal_ring_get_type( void ); 
 	extern GType vips_mask_ideal_band_get_type( void ); 
 	extern GType vips_mask_fractal_get_type( void ); 
+	extern GType vips_fractsurf_get_type( void ); 
 
 	vips_black_get_type();
 	vips_gaussmat_get_type();
@@ -162,5 +163,6 @@ vips_create_operation_init( void )
 	vips_mask_gaussian_ring_get_type(); 
 	vips_mask_gaussian_band_get_type(); 
 	vips_mask_fractal_get_type(); 
+	vips_fractsurf_get_type(); 
 }
 
