@@ -8,7 +8,6 @@ libfreqfilt_la_SOURCES = \
 	freqmult.c \
 	spectrum.c \
 	im_phasecor_fft.c \
-	freq_dispatch.c \
-	im_fractsurf.c 
+	freq_dispatch.c 
 
 AM_CPPFLAGS = -I${top_srcdir}/libvips/include @VIPS_CFLAGS@ @VIPS_INCLUDES@ 
